--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jul 11 00:46:43 IST 2016
-sdk.dir=/home/ajitesh/Android/Sdk
+#Thu Jul 14 19:47:59 IST 2016
+sdk.dir=C\:\\Users\\Ravi\\AppData\\Local\\Android\\android-sdk
