--- a/gradle.properties
+++ b/gradle.properties
@@ -13,11 +13,11 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Thu Jul 14 19:48:00 IST 2016
-systemProp.http.proxyPassword=9015384
-systemProp.http.proxyHost=172.16.0.4
-systemProp.http.proxyUser=RA1411003010645
-systemProp.http.proxyPort=8080
-systemProp.https.proxyPassword=9015384
-systemProp.https.proxyHost=172.16.0.4
-systemProp.https.proxyUser=RA1411003010645
-systemProp.https.proxyPort=8080
+#systemProp.http.proxyPassword=9015384
+#systemProp.http.proxyHost=172.16.0.4
+#systemProp.http.proxyUser=RA1411003010645
+#systemProp.http.proxyPort=8080
+#systemProp.https.proxyPassword=9015384
+#systemProp.https.proxyHost=172.16.0.4
+#systemProp.https.proxyUser=RA1411003010645
+#systemProp.https.proxyPort=8080
