--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "23.0.3"
+    buildToolsVersion "24.0.0"
 
     defaultConfig {
         applicationId "com.aaruush16.webarch.aaruush16"
@@ -36,7 +36,7 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.joanzapata.iconify:android-iconify-simplelineicons:2.2.2'
     compile 'com.android.volley:volley:1.0.0'
-    compile 'com.github.clans:fab:1.6.3'
+    compile 'com.mikhaellopez:circularimageview:3.0.2'
     compile ('com.github.florent37:materialviewpager:1.2.0@aar'){
         transitive = true
     }
