--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Aug 17 00:18:41 IST 2016
-sdk.dir=C\:\\Users\\Ravi\\AppData\\Local\\Android\\android-sdk
+#Mon Jul 18 13:17:57 IST 2016
+sdk.dir=/home/ajitesh/Android/Sdk
