--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Aug 27 16:49:07 IST 2016
-sdk.dir=C\:\\Users\\Rishi\\AppData\\Local\\Android\\android-sdk
+#Sat Aug 27 21:14:49 IST 2016
+sdk.dir=C\:\\Users\\Ravi\\AppData\\Local\\Android\\android-sdk
