--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'com.joanzapata.iconify:android-iconify-simplelineicons:2.2.2'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
+    compile 'com.google.firebase:firebase-messaging:9.0.2'
 
     compile 'com.ramotion.foldingcell:folding-cell:1.0.1'
 
