--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Sat Aug 27 21:17:32 IST 2016
-systemProp.https.proxyPort=3128
-systemProp.http.proxyHost=172.16.0.7
-systemProp.https.proxyHost=172.16.0.7
-systemProp.http.proxyPort=3128
+#systemProp.https.proxyPort=3128
+#systemProp.http.proxyHost=172.16.0.7
+#systemProp.https.proxyHost=172.16.0.7
+#systemProp.http.proxyPort=3128
