--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Aug 27 22:27:19 IST 2016
-sdk.dir=C\:\\Users\\Rishi\\AppData\\Local\\Android\\android-sdk
+#Sun Aug 28 22:31:59 IST 2016
+ndk.dir=/Users/kjaganmohan/Library/Android/sdk/ndk-bundle
+sdk.dir=/Users/kjaganmohan/Library/Android/sdk
