--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Aug 28 22:31:59 IST 2016
-ndk.dir=/Users/kjaganmohan/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/kjaganmohan/Library/Android/sdk
+#Mon Aug 29 02:41:14 IST 2016
+sdk.dir=C\:\\Users\\Ravi\\AppData\\Local\\Android\\android-sdk
