--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     compile 'com.google.firebase:firebase-messaging:9.0.2'
+    compile 'me.grantland:autofittextview:0.2.+'
+
 
     compile 'com.ramotion.foldingcell:folding-cell:1.0.1'
 
