--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Aug 29 02:41:14 IST 2016
-sdk.dir=C\:\\Users\\Ravi\\AppData\\Local\\Android\\android-sdk
+#Mon Aug 29 03:22:24 IST 2016
+sdk.dir=C\:\\Users\\Rishi\\AppData\\Local\\Android\\android-sdk
