--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'me.grantland:autofittextview:0.2.+'
     compile 'com.ramotion.foldingcell:folding-cell:1.0.1'
     compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.yalantis:flipviewpager:1.0.0'
     compile ('com.github.florent37:materialviewpager:1.2.0@aar'){
         transitive = true
     }
