--- a/gradle.properties
+++ b/gradle.properties
@@ -12,8 +12,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Sat Sep 03 16:05:04 IST 2016
-#systemProp.https.proxyPort=3128
-#systemProp.http.proxyHost=172.16.0.7
-#systemProp.https.proxyHost=172.16.0.7
-#systemProp.http.proxyPort=3128
+#Sat Sep 03 18:55:37 IST 2016
+systemProp.https.proxyPort=3128
+systemProp.http.proxyHost=172.16.0.7
+systemProp.https.proxyHost=172.16.0.7
+systemProp.http.proxyPort=3128
