--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Sep 03 18:55:31 IST 2016
-sdk.dir=C\:\\Users\\Ravi\\AppData\\Local\\Android\\android-sdk
+#Mon Sep 05 00:28:47 IST 2016
+sdk.dir=/home/ajitesh/Android/Sdk
