--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Sep 05 00:28:47 IST 2016
-sdk.dir=/home/ajitesh/Android/Sdk
+#Mon Sep 05 01:10:45 IST 2016
+sdk.dir=C\:\\Users\\Rishi\\AppData\\Local\\Android\\android-sdk
