--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Sep 05 01:10:45 IST 2016
-sdk.dir=C\:\\Users\\Rishi\\AppData\\Local\\Android\\android-sdk
+#Tue Sep 06 23:35:35 IST 2016
+sdk.dir=C\:\\Users\\Ravi\\AppData\\Local\\Android\\android-sdk
